--- a/package.json
+++ b/package.json
@@ -8,5 +8,16 @@
   },
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Logkesh/nano-demo-calculator-app.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Logkesh/nano-demo-calculator-app/issues"
+  },
+  "homepage": "https://github.com/Logkesh/nano-demo-calculator-app#readme"
 }
